--- a/PortiaNet.HealthCheck.Reporter/PortiaNet.HealthCheck.Reporter.csproj
+++ b/PortiaNet.HealthCheck.Reporter/PortiaNet.HealthCheck.Reporter.csproj
@@ -11,7 +11,8 @@
     <RepositoryUrl>https://github.com/PortiaNet/HealthCheck.Reporter</RepositoryUrl>
     <PackageIcon>logo-128.png</PackageIcon>
     <PackageReadmeFile>README.MD</PackageReadmeFile>
-    <PackageTags>.Net; HealthCheck; Watchdog; Monitoring; Performance Control</PackageTags>
+    <PackageTags>.Net; HealthCheck; Watchdog; Monitoring; Performance Monitoring</PackageTags>
+	  <PackageLicenseFile>License.txt</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,6 +28,10 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+	  <None Include="..\License.txt">
+		  <Pack>True</Pack>
+		  <PackagePath>\</PackagePath>
+	  </None>
   </ItemGroup>
 
   <ItemGroup>
