--- a/PortiaNet.HealthCheck.Reporter/PortiaNet.HealthCheck.Reporter.csproj
+++ b/PortiaNet.HealthCheck.Reporter/PortiaNet.HealthCheck.Reporter.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -14,6 +14,7 @@
     <PackageTags>.Net; HealthCheck; Watchdog; Monitoring; Performance Monitoring</PackageTags>
 	  <PackageLicenseFile>License.txt</PackageLicenseFile>
 	  <Copyright>Copyright 2022 - Amin Esmaeily</Copyright>
+	  <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
