--- a/PortiaNet.HealthCheck.Reporter/PortiaNet.HealthCheck.Reporter.csproj
+++ b/PortiaNet.HealthCheck.Reporter/PortiaNet.HealthCheck.Reporter.csproj
@@ -14,7 +14,8 @@
     <PackageTags>.Net; HealthCheck; Watchdog; Monitoring; Performance Monitoring</PackageTags>
 	  <PackageLicenseFile>License.txt</PackageLicenseFile>
 	  <Copyright>Copyright 2022 - Amin Esmaeily</Copyright>
-	  <Version>1.0.2</Version>
+	  <Version>1.0.3</Version>
+	  <Description>A .Net library to report the requests received on the server side for the health check and performance control of the APIs and actions.</Description>
   </PropertyGroup>
 
   <ItemGroup>
