--- a/PortiaNet.HealthCheck.Reporter/PortiaNet.HealthCheck.Reporter.csproj
+++ b/PortiaNet.HealthCheck.Reporter/PortiaNet.HealthCheck.Reporter.csproj
@@ -1,44 +1,40 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<SignAssembly>False</SignAssembly>
-		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<Authors>Amin Esmaeily</Authors>
-		<PackageProjectUrl>https://github.com/PortiaNet/HealthCheck.Reporter</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/PortiaNet/HealthCheck.Reporter</RepositoryUrl>
-		<PackageIcon>logo-128.png</PackageIcon>
-		<PackageReadmeFile>README.MD</PackageReadmeFile>
-		<PackageTags>.Net; HealthCheck; Watchdog; Monitoring; Performance Monitoring</PackageTags>
-		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-		<Copyright>Copyright 2022 - Amin Esmaeily</Copyright>
-		<Version>1.2.0</Version>
-		<Description>A .Net library to report the requests received on the server side for the health check and performance control of the APIs and actions.</Description>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<Content Include="logo-128.png" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<None Include="..\Assets\logo-128.png">
-			<Pack>True</Pack>
-			<Visible>False</Visible>
-			<PackagePath></PackagePath>
-		</None>
-		<None Include="..\README.MD">
-			<Pack>True</Pack>
-			<Visible>False</Visible>
-			<PackagePath></PackagePath>
-		</None>
-	</ItemGroup>
-
-
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" Version="2.2.0" />
-	</ItemGroup>
-
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <SignAssembly>False</SignAssembly>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Authors>Amin Esmaeily</Authors>
+    <PackageProjectUrl>https://github.com/PortiaNet/HealthCheck.Reporter</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/PortiaNet/HealthCheck.Reporter</RepositoryUrl>
+    <PackageIcon>logo-128.png</PackageIcon>
+    <PackageReadmeFile>README.MD</PackageReadmeFile>
+    <PackageTags>.Net; HealthCheck; Watchdog; Monitoring; Performance Monitoring</PackageTags>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <Copyright>Copyright 2024 - Amin Esmaeily</Copyright>
+    <Version>1.3.0</Version>
+    <Description>A .Net library to report the requests received on the server side for the health check and performance control of the APIs and actions.</Description>
+  </PropertyGroup>
+  <ItemGroup>
+    <Content Include="logo-128.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Assets\logo-128.png">
+      <Pack>True</Pack>
+      <Visible>False</Visible>
+      <PackagePath>
+      </PackagePath>
+    </None>
+    <None Include="..\README.MD">
+      <Pack>True</Pack>
+      <Visible>False</Visible>
+      <PackagePath>
+      </PackagePath>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" Version="2.2.0" />
+  </ItemGroup>
 </Project>
